2006-10-24  Harry Lu  <harry.lu@sun.com>

	Fix for bugzilla bug 364605.

	* configure.in: Add AC_CHECK_HEADERS for err.h and sys/sysctl.h
	* battstat/battstat_applet.c:
	* battstat/power-management.c:
	* battstat/properties.c: use HAVE_ERR_H and HAVE_SYS_SYSCTL_H.

2006-10-14  Sergey Udaltsov <svu@gnome.org>

	* README.CVS: branched for gnome-2-16, this is the development branch

2006-10-11  Luca Ferretti  <elle.uca@libero.it>

	* gswitchit/.cvsignore:
	* libgswitchit/.cvsignore:
	* modemlights/.cvsignore:
	Updated.

	* gswitchit/help/sv/.cvsignore:
	Added

2006-10-11  Luca Ferretti  <elle.uca@libero.it>

	* invest-applet/.cvsignore: add this too.

2006-10-11  Luca Ferretti  <elle.uca@libero.it>

	* */.cvsignore: Add or update cvsignore files (bug #323327)
	Patch from Tom Tromey.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS:
	- release GNOME Applets 2.16.1

2006-09-19  Sergey Udaltsov <svu@gnome.org>

	* configure.in, Makefile.am, libgswitchit/Makefile.am: explicitly
	using DBUS, allowing builds without HAL, resolving #353155

2006-09-05  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release GNOME Applets 2.16.0.1

2006-09-04  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS:
	- release GNOME Applets 2.16.0

	* geyes/Makefile.am:
	* modemlights/Makefile.am:
	* stickynotes/pixmaps/Makefile.am:
	* cpufreq/pixmaps/Makefile.am:
	- ensure the icon cache is regenerated

2006-08-23  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: unconditionally enable stickynotes applet, because
	  I hate freedom

2006-08-22  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release GNOME Applets 2.15.90


	* cpufreq/pixmaps/Makefile.am:
	* geyes/Makefile.am:
	* modemlights/Makefile.am:
	* po/POTFILES.in:
	* stickynotes/Makefile.am:
	* stickynotes/data/Makefile.am:
	* stickynotes/pixmaps/Makefile.am: distcheck fixes

2006-08-22  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* po/POTFILES.in: