@@ -1,3 +1,7 @@
+2006-11-17  Matthias Clasen <mclasen@redhat.com>
+
+	* mixer/applet.c: Fix mute icon.  (#360507)
+
 2006-10-24  Harry Lu  <harry.lu@sun.com>
 
 	Fix for bugzilla bug 364605.
